--- a/package.json
+++ b/package.json
@@ -13,31 +13,34 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-client": "^0.8.1",
-    "axios": "^0.15.3",
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-env": "^1.1.8",
-    "babel-preset-react": "^6.22.0",
-    "body-parser": "^1.16.0",
-    "connect-mongo": "^1.3.2",
-    "css-loader": "^0.26.1",
-    "express": "^4.14.0",
-    "express-graphql": "^0.6.1",
-    "express-session": "^1.15.0",
+    "@apollo/client": "^3.3.15",
+    "axios": "^0.21.0",
+    "body-parser": "^1.19.0",
+    "connect-mongo": "^3.2.0",
+    "css-loader": "^5.0.1",
+    "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
+    "express-session": "^1.17.1",
     "graphql": "^15.5.0",
-    "html-webpack-plugin": "^2.26.0",
-    "lodash": "^4.17.4",
-    "mongoose": "^5.12.3",
-    "nodemon": "*",
-    "passport": "^0.3.2",
+    "html-webpack-plugin": "^4.5.0",
+    "lodash": "^4.17.20",
+    "mongoose": "^5.11.7",
+    "nodemon": "^2.0.6",
+    "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "react": "15.4.2",
-    "react-apollo": "^0.9.0",
-    "react-dom": "15.4.2",
-    "react-router": "^3.0.2",
-    "style-loader": "^0.13.1",
-    "webpack": "^2.2.0",
-    "webpack-dev-middleware": "^1.9.0"
+    "react": "^17.0.1",
+    "react-apollo": "^3.1.5",
+    "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.10.1",
+    "webpack-dev-middleware": "^4.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
+    "@babel/preset-react": "^7.12.10",
+    "babel-loader": "^8.2.2"
   }
 }
